# mgrc-ai-trans

./: .env.example  .gitignore  .gitmodules  README.md  main.py  play.ipynb  play.json  pyproject.toml
.trae/rules/: project_rules.md
examples/: README.md
examples/magireco-source/: 000003-3.json  101101-6.json
prompts/: sakura_v0.md  sakura_v1.md  sakura_v6.1.json  sakura_v7.md  sakura_v8.1.md  sakura_v8.2.md  sakura_v8.3.md
prompts/legacy/: 0-shot_v0.md  sakura_v2.md  sakura_v3.md  sakura_v5.json  sakura_v6.0.json
src/mgrc_ai_trans/: __init__.py  __main__.py  cli.py  config.py  main.py
src/mgrc_ai_trans/prompts/: example_msg_v1.json  sakura_ft_v0.md  sakura_v8.0.md  sakura_v8.4.md
src/mgrc_ai_trans/prompts/legacy/: sakura_v4.json
src/mgrc_ai_trans/utils/: assistant.py  format.py  misc.py  prompter.py
src/mgrc_ai_trans/utils/scripts/: install_deeplx.sh
test/: test_config.py  test_examples.py  test_prompt_access.py  test_trans_single.py
utils/: assistant.py  format.py  misc.py  orion_util.py  prompter.py
utils/scripts/: install_deeplx.sh
