[project]
name = "mgrc-ai-trans"
version = "0.1.0"
description = "A project for translating Magireco game data"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "python-dotenv",
    "tqdm",
    "jinja2",
    "fire",
    "psutil",
]

[project.scripts]
mgrc-trans = "mgrc_ai_trans.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mgrc_ai_trans"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
